--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -20,7 +20,7 @@
             <h1 class="p-5">Register new employee</h1>
         </div>
         <div class="card-body">
-            <form th:action="@{/user/create}" method="post"  th:object="${user}" class="needs-validation" novalidate>
+            <form th:action="@{/user/update/{id}(id=${user.userName})}" method="post"  th:object="${user}" class="needs-validation" novalidate>
 
 
                 <div class="form-row">
@@ -69,13 +69,13 @@
                     <input type="text"  th:field="*{password}" class="form-control" id="password2" placeholder="1234 Main St">
                 </div>
 
-                    <div class="form-group col-md-4">
-                        <label for="inputState">Role</label>
-                        <select id="inputState" th:field="*{role}" class="form-control">
+                <div class="form-group col-md-4">
+                    <label for="inputState">Role</label>
+                    <select id="inputState" th:field="*{role}" class="form-control">
 
-                            <option th:each="role:${roles}" th:value="${role.id}" th:text="${role.description}">...</option>
-                        </select>
-                    </div>
+                        <option th:each="role:${roles}" th:value="${role.id}" th:text="${role.description}" th:selected="${role.id}==${user.role.id}">...</option>
+                    </select>
+                </div>
 
                 <div class="form-group d-flex ">
                     <label for="male">Male</label>
@@ -84,7 +84,7 @@
                     <input type="radio"th:field="*{gender}" th:value="FEMALE"  class="form-control" id="female">
                 </div>
 
-                <button type="submit" class="btn btn-warning">Create</button>
+                <button type="submit" class="btn btn-warning">Save</button>
             </form>
         </div>
     </div>
@@ -118,8 +118,7 @@
             <td >unknown</td>
             <td th:text="${user.role.description}"></td>
             <td th:text="${user.gender.value}" ></td>
-            <td ><a th:href="@{/user/update/{id}(id=${user.userName})}"><button class="btn bg-warning">update</button></a>
-                <a th:href="@{/user/delete/{id}(id=${user.userName})}"><button class="btn bg-danger">delete</button></a></td>
+            <td ><a><button class="btn bg-warning">update</button></a> <a><button class="btn bg-danger">delete</button></a></td>
 
         </tr>
         </tbody>
