--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -20,27 +20,30 @@
             <h1 class="p-5">Register new employee</h1>
         </div>
         <div class="card-body">
-            <form th:action="@{/user/create}" method="post"  th:object="${user}" class="needs-validation" novalidate>
+            <form th:action="@{/user/create}" method="post" th:object="${user}" class="needs-validation" novalidate>
 
 
                 <div class="form-row">
                     <div class="form-group col-md-4">
                         <label for="inputFirstName">First name</label>
-                        <input type="text" th:field="*{firstName}" class="form-control" id="inputFirstName"  placeholder="First name" required>
+                        <input type="text" th:field="*{firstName}" class="form-control" id="inputFirstName"
+                               placeholder="First name" required>
                         <div class="invalid-feedback">
                             Please enter first name.
                         </div>
                     </div>
                     <div class="form-group col-md-4">
                         <label for="inputLastName">Last name</label>
-                        <input type="text" th:field="*{lastName}" class="form-control" id="inputLastName" placeholder="Last Name" required>
+                        <input type="text" th:field="*{lastName}" class="form-control" id="inputLastName"
+                               placeholder="Last Name" required>
                         <div class="invalid-feedback">
                             Please enter last name.
                         </div>
                     </div>
                     <div class="form-group col-md-4">
                         <label for="phone">Phone number</label>
-                        <input type="text" th:field="*{phone}" class="form-control" id="phone" placeholder="Birthday" required>
+                        <input type="text" th:field="*{phone}" class="form-control" id="phone" placeholder="Birthday"
+                               required>
                         <div class="invalid-feedback">
                             type phone number
                         </div>
@@ -51,14 +54,16 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">Email</label>
-                        <input type="email"  th:field="*{userName}" class="form-control" id="inputEmail4"  placeholder="Email" required>
+                        <input type="email" th:field="*{userName}" class="form-control" id="inputEmail4"
+                               placeholder="Email" required>
                         <div class="invalid-feedback">
                             Please choose a username.
                         </div>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputPassword4">Password</label>
-                        <input type="password"  th:field="*{password}"class="form-control" id="inputPassword4" placeholder="Password" required>
+                        <input type="password" th:field="*{password}" class="form-control" id="inputPassword4"
+                               placeholder="Password" required>
                         <div class="invalid-feedback">
                             Please choose a password.
                         </div>
@@ -66,22 +71,23 @@
                 </div>
                 <div class="form-group">
                     <label for="password2">Password confirm</label>
-                    <input type="text"  th:field="*{password}" class="form-control" id="password2" placeholder="1234 Main St">
+                    <input type="text" th:field="*{password}" class="form-control" id="password2"
+                           placeholder="1234 Main St">
                 </div>
 
-                    <div class="form-group col-md-4">
-                        <label for="inputState">Role</label>
-                        <select id="inputState" th:field="*{role}" class="form-control">
+                <div class="form-group col-md-4">
+                    <label for="inputState">Role</label>
+                    <select id="inputState" th:field="*{role}" class="form-control">
 
-                            <option th:each="role:${roles}" th:value="${role.id}" th:text="${role.description}">...</option>
-                        </select>
-                    </div>
+                        <option th:each="role:${roles}" th:value="${role.id}" th:text="${role.description}">...</option>
+                    </select>
+                </div>
 
                 <div class="form-group d-flex ">
                     <label for="male">Male</label>
-                    <input type="radio" th:field="*{gender}" th:value="MALE" class="form-control" id="male" >
+                    <input type="radio" th:field="*{gender}" th:value="MALE" class="form-control" id="male">
                     <label for="female">female</label>
-                    <input type="radio"th:field="*{gender}" th:value="FEMALE"  class="form-control" id="female">
+                    <input type="radio" th:field="*{gender}" th:value="FEMALE" class="form-control" id="female">
                 </div>
 
                 <button type="submit" class="btn btn-warning">Create</button>
@@ -97,7 +103,7 @@
         <thead>
         <tr>
             <th scope="col">First Name</th>
-            <th scope="col">Last Name </th>
+            <th scope="col">Last Name</th>
             <th scope="col">Email</th>
             <th scope="col">Phone num</th>
             <th scope="col">Password</th>
@@ -109,18 +115,21 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="user:${users}" >
+        <tr th:each="user:${users}">
 
             <td th:text="${user.firstName}"></td>
             <td th:text="${user.lastName}"></td>
             <td th:text="${user.userName}"></td>
             <td th:text="${user.phone}"></td>
-            <td >unknown</td>
+            <td>unknown</td>
             <td th:text="${user.role.description}"></td>
-            <td th:text="${user.gender.value}" ></td>
-            <td ><a th:href="@{/user/update/{id}(id=${user.userName})}"><button class="btn bg-warning">update</button></a>
-                <a th:href="@{/user/delete/{id}(id=${user.userName})}"><button class="btn bg-danger">delete</button></a></td>
-
+            <td th:text="${user.gender.value}"></td>
+            <td><a th:href="@{/user/update/{id}(id=${user.userName})}">
+                <button class="btn bg-warning">update</button>
+            </a>
+                <a th:href="@{/user/delete/{id}(id=${user.userName})}">
+                    <button class="btn bg-danger">delete</button>
+                </a></td>
         </tr>
         </tbody>
     </table>
@@ -129,14 +138,14 @@
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script>
     // Example starter JavaScript for disabling form submissions if there are invalid fields
-    (function() {
+    (function () {
         'use strict';
-        window.addEventListener('load', function() {
+        window.addEventListener('load', function () {
             // Fetch all the forms we want to apply custom Bootstrap validation styles to
             var forms = document.getElementsByClassName('needs-validation');
             // Loop over them and prevent submission
-            var validation = Array.prototype.filter.call(forms, function(form) {
-                form.addEventListener('submit', function(event) {
+            var validation = Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
                     if (form.checkValidity() === false) {
                         event.preventDefault();
                         event.stopPropagation();
