--- a/src/main/resources/templates/welcome/welcome.html
+++ b/src/main/resources/templates/welcome/welcome.html
@@ -39,7 +39,7 @@
                                 <a class=""  th:href="@{/user/create}">User Create</a>
                             </li>
                             <li class="nav-item">
-                                <a class="" href="#">Project Create</a>
+                                <a class="" th:href="@{/project/create}">Project Create</a>
                             </li>
                         </ul>
                     </li>
