--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -17,25 +17,28 @@
 
     <div class="card">
         <div class="card-header d-flex justify-content-center align-items-center bg-info">
-            <h1 class="p-5">Register new employee</h1>
+            <h1 class="p-5">create task</h1>
         </div>
         <div class="card-body">
-            <form th:action="@{/project/update/{id}(id=${project.projectCode})}"method="post" th:object="${project}" class="needs-validation" novalidate>
+            <form th:action="@{/task/create}" method="post" class="needs-validation" novalidate>
 
 
                 <div class="form-row">
                     <div class="form-group col-md-4">
-                        <label for="inputFirstName" >Project name</label>
-                        <input type="text" class="form-control" th:field="*{projectName}" id="inputFirstName"
-                               placeholder="Project name" required>
+                        <label for="projName">Project name</label>
+                        <select id="projName" class="form-control">
+                            <option>...</option>
+                        </select>
                         <div class="invalid-feedback">
-                            Please enter first name.
+                            Please enter proj name.
                         </div>
                     </div>
+                    <br>
                     <div class="form-group col-md-4">
-                        <label for="inputLastName">Project code</label>
-                        <input type="text" class="form-control" th:field="*{projectCode}" id="inputLastName"
-                               placeholder="Project code" required>
+                        <label for="employee">Assigned employee</label>
+                        <select id="employee" class="form-control">
+                            <option>...</option>
+                        </select>
                         <div class="invalid-feedback">
                             Please enter last name.
                         </div>
@@ -44,34 +47,19 @@
 
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="date">Start date</label>
-                        <input type="date" th:field="*{startDate}" class="form-control" id="date"
-                               placeholder="mm/dd/yyyy" required>
+                        <label for="date">Task subject</label>
+                        <input type="text" class="form-control" id="date"
+                               placeholder="task Explanation" required>
                         <div class="invalid-feedback">
                             Please choose a start date.
                         </div>
                     </div>
-                    <div class="form-group col-md-6">
-                        <label for="date2">End date</label>
-                        <input type="date" th:field="*{endDate}"class="form-control" id="date2"
-                               placeholder="mm/dd/yyyy" required>
-                        <div class="invalid-feedback">
-                            Please choose end date.
-                        </div>
-                    </div>
                 </div>
 
-
-                <div class="form-group col-md-4">
-                    <label for="inputState">Manager</label>
-                    <select th:field="*{manager}" id="inputState" class="form-control">
-                        <option th:each="manager:${managers}" th:value="${manager.userName}" th:text="${manager.firstName +' '+manager.lastName}">...</option>
-                    </select>
-                </div>
 
                 <div class="form-group d-flex ">
                     <label for="details">Project details</label>
-                    <textarea type="radio" th:field="*{projDetail}" class="form-control" id="details"></textarea>
+                    <textarea type="text" class="form-control" id="details"></textarea>
                 </div>
 
                 <button type="submit" class="btn btn-warning">Create</button>
@@ -87,34 +75,30 @@
         <thead>
         <tr>
             <th scope="col">Project Name</th>
-            <th scope="col">Project Code</th>
-            <th scope="col">Manager</th>
-            <th scope="col">Start date</th>
-            <th scope="col">End date</th>
+            <th scope="col">Task subject</th>
+            <th scope="col">Assigned employee</th>
+            <th scope="col">Assigned date</th>
             <th scope="col">Status</th>
             <th scope="col">Action</th>
 
         </tr>
         </thead>
         <tbody>
-        <tr th:each="proj:${projects}">
-
-            <td th:text="${proj.projectName}"></td>
-            <td th:text="${proj.projectCode}"></td>
-            <td th:text="${proj.manager.firstName +' '+proj.manager.lastName}"></td>
-            <td th:text="${#temporals.format(proj.startDate, 'MMM dd yyyy')}"></td>
-            <td th:text="${#temporals.format(proj.endDate, 'MMM dd yyyy')}"></td>
-            <td th:text="${proj.projectStatus}"></td>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td>
-                <a >
-                    <button class="btn bg-warning" th:href="@{/project/update/{id}(id=${proj.projectCode})}">update</button>
+                <a>
+                    <button class="btn bg-warning">update</button>
                 </a>
-                <a th:href="@{/project/delete/{id}(id=${proj.projectCode})}">
+                <a>
                     <button class="btn bg-danger">delete</button>
                 </a>
-                <a th:href="@{/project/complete/{id}(id=${proj.projectCode})}">
-                    <button class="btn bg-info">complete</button>
-                </a></td>
+            </td>
         </tr>
         </tbody>
     </table>
