--- a/src/main/resources/templates/welcome/welcome.html
+++ b/src/main/resources/templates/welcome/welcome.html
@@ -50,7 +50,7 @@
                         </a>
                         <ul class=" flex-column">
                             <li class="nav-item">
-                                <a class="" href="#">Task Create</a>
+                                <a class="" th:href="@{/task/create}">Task Create</a>
                             </li>
                             <li class="nav-item">
                                 <a class="" href="#">Project Status</a>
