--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -20,24 +20,25 @@
             <h1 class="p-5">create task</h1>
         </div>
         <div class="card-body">
-            <form th:action="@{/task/create}" method="post" class="needs-validation" novalidate>
+            <form th:action="@{/task/create}" method="post" th:object="${task}" class="needs-validation" novalidate>
 
 
                 <div class="form-row">
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-6">
                         <label for="projName">Project name</label>
-                        <select id="projName" class="form-control">
-                            <option>...</option>
+                        <select id="projName" th:field="*{project}"  class="form-control">
+                            <!--/*@thymesVar id="projectCode" type=""*/-->
+                            <option th:each="project:${projects}" th:value="${project.projectCode}" th:text="${project.projectName}" >...</option>
                         </select>
                         <div class="invalid-feedback">
                             Please enter proj name.
                         </div>
                     </div>
                     <br>
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-6">
                         <label for="employee">Assigned employee</label>
-                        <select id="employee" class="form-control">
-                            <option>...</option>
+                        <select id="employee"th:field="*{assignedEmployee}"  class="form-control">
+                            <option th:each="employee:${employees}" th:value="${employee.userName}" th:text="${employee.firstName +' '+employee.lastName}">...</option>
                         </select>
                         <div class="invalid-feedback">
                             Please enter last name.
@@ -48,7 +49,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="date">Task subject</label>
-                        <input type="text" class="form-control" id="date"
+                        <input type="text"  th:field="*{taskSubject}" class="form-control" id="date"
                                placeholder="task Explanation" required>
                         <div class="invalid-feedback">
                             Please choose a start date.
@@ -59,7 +60,7 @@
 
                 <div class="form-group d-flex ">
                     <label for="details">Project details</label>
-                    <textarea type="text" class="form-control" id="details"></textarea>
+                    <textarea type="text"  th:field="*{taskDetail}" class="form-control" id="details"></textarea>
                 </div>
 
                 <button type="submit" class="btn btn-warning">Create</button>
@@ -84,13 +85,12 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+        <tr th:each="task:${tasks}">
+            <td th:text="${task.project.projectName}"></td>
+            <td th:text="${task.taskSubject}"></td>
+            <td  th:text="${task.assignedEmployee.firstName + ' '+task.assignedEmployee.lastName}"></td>
+            <td th:text="${#temporals.format(task.assignedDate,'MMM dd yyyy')}"></td>
+            <td th:text="${task.taskStatus}"></td>
             <td>
                 <a>
                     <button class="btn bg-warning">update</button>
