task create added

--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -95,7 +95,7 @@
                 <a>
                     <button class="btn bg-warning">update</button>
                 </a>
-                <a>
+                <a th:href="@{/task/delete/{id}(id=${task.id})}">
                     <button class="btn bg-danger">delete</button>
                 </a>
             </td>
