--- a/src/main/resources/templates/task/update.html
+++ b/src/main/resources/templates/task/update.html
@@ -20,7 +20,7 @@
             <h1 class="p-5">create task</h1>
         </div>
         <div class="card-body">
-            <form th:action="@{/task/create}" method="post" th:object="${task}" class="needs-validation" novalidate>
+            <form th:action="@{/task/update/{id}(id=${task.id})}" method="post" th:object="${task}" class="needs-validation" novalidate>
 
 
                 <div class="form-row">
